# coder_system

./: .gitignore  PLAN.md  PROJECT.md  README.md  pyproject.toml  requirements.txt
agent_system/: __init__.py  __main__.py  cli.py  mcp_server.py  orchestrator.py  project_wizard.py  task_wizard.py
agent_system/agents/: __init__.py  analyst.py  base.py  coder.py  planner.py  reflector.py  reviewer.py  supervisor.py
agent_system/models/: context.py  mcp_config.py  project_config.py  task.py
agent_system/prompts/: analyst.md  coder.md  planner.md  reflector.md  reviewer.md  supervisor.md
agent_system/services/: conversation_logger.py  email_approval.py  file_service.py  git_service.py  llm.py  logging_formatter.py  mcp_client.py  path_guard.py  state_store.py
agent_system/tools/: __init__.py  diff_file.py  grep_content.py  list_directory.py  process.py  project_structure.py  read_file.py  replace_in_file.py  run_command.py  search_file.py  todo_list.py  ts_check.py  write_file.py
scripts/: list_cocos_mcp_tools.py
tests/: test_cli.py  test_email_approval.py  test_llm_retry.py  test_mcp_client.py  test_pause_on_failure.py  test_step10_conversations.py  test_step2.py  test_step3.py  test_step4.py  test_step5.py  test_step6.py  test_step7.py  test_step8_tools.py  test_step9_reflector.py  test_supervisor.py
tests/fixtures/: e2e_project.json  invalid_project.json  sample.lua  valid_project.json
